--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@svgr/cli": "^6.2.1",
     "@svgr/webpack": "^6.2.1",
+    "@types/styled-components": "^5.1.24",
+    "babel-plugin-styled-components": "^2.0.6",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
